--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@reduxjs/toolkit": "1.5.0",
     "axios": "^0.21.1",
     "dayjs": "^1.11.2",
+    "gh-pages": "^4.0.0",
     "history": "^4.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -36,6 +38,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "eslint": "eslint --ext .tsx --ext .ts src/"
   },
   "eslintConfig": {
